# argos

./: .gitignore  .pylintrc  .travis.yml  CLAUDE.md  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  argos  dot_pylintrc.old  environment.yml  paths.txt  pylint_check.sh  pyproject.toml  setup.py  todo.txt  tox.ini
.github/workflows/: argos-ci.yml
argos/: __init__.py  __main__.py  application.py  argos_make_wrappers.py  info.py  main.py  mytest.py
argos/collect/: collector.py  collectortree.py
argos/config/: abstractcti.py  boolcti.py  choicecti.py  configitemdelegate.py  configtreemodel.py  configtreeview.py  floatcti.py  groupcti.py  intcti.py  qtctis.py  stringcti.py  untypedcti.py
argos/img/: argos.css
argos/inspector/: __init__.py  abstract.py  debug.py  dialog.py  errormsg.py  registry.py  selectionpane.py
argos/inspector/pgplugins/: __init__.py  colorbar.py  imageplot2d.py  lineplot1d.py  old_imageplot2d.py  pgctis.py  pghistlutitem.py  pgplotitem.py  uml.dia
argos/inspector/qtplugins/: __init__.py  table.py  text.py
argos/qt/: __init__.py  bindings.py  colorselect.py  labeledwidget.py  misc.py  registry.py  registrytable.py  scientificspinbox.py  shortcutedit.py  togglecolumn.py  treeitems.py  treemodels.py
argos/reg/: __init__.py  basereg.py  dialog.py  tabmodel.py  tabview.py
argos/repo/: baserti.py  colors.py  detailpanes.py  filesytemrtis.py  iconfactory.py  memoryrtis.py  registry.py  repotreemodel.py  repotreeview.py  testdata.py
argos/repo/detailplugins/: attr.py  dim.py  prop.py  quicklook.py
argos/repo/rtiplugins/: __init__.py  arrowio.py  exdir.py  exdir2.py  hdf5.py  jsonio.py  ncdf.py  numpyio.py  pandasio.py  pillowio.py  scipyio.py
argos/utils/: __init__.py  cls.py  config.py  default_logging.json  defs.py  dirs.py  logs.py  masks.py  misc.py  moduleinfo.py
argos/widgets/: __init__.py  aboutdialog.py  argostableview.py  argostreeview.py  constants.py  display.py  exportdatadialog.py  exportimagedialog.py  mainwindow.py  misc.py  pluginsdialog.py  testwalkdialog.py
argos_installer/: build_installer.txt  pyoxidizer.bzl
development/: 3rd_party_data.txt  3rd_party_packages.txt  AUTHORS.rst  CONTRIBUTING.rst  activate.sh  argos.py  data_urls.txt  dep-graph.py  environment.yaml  environment_min.yaml  int_coercion.py  mypy.ini  readme.txt  to_be_checked.txt  todo.txt
development/drafts/: iters.py
docs/: conf.py  create_html_doc.sh  index.rst  installation.rst  usage.rst
docs/examples/: buggy_inspector.py  example_plugin.py  nonexisting.py  print_plugins.py  test_plugin.py
docs/source/: conf.py  index.rst
libargos/: __init__.py  application.py  commonstate.py  info.py  main.py  mainwindow.py  moduleinfo.py  qt.py  utils.py
libargos/collect/: collector.py  collectortree.py
libargos/config/: abstractcti.py  basecti.py  boolcti.py  choicecti.py  colorcti.py  configitemdelegate.py  configtreemodel.py  configtreeview.py  emptycti.py  floatcti.py  groupcti.py  intcti.py  qtctis.py  simplectis.py  stringcti.py  untypedcti.py
libargos/img/: create_icons.py
libargos/inspector/: __init__.py  abstract.py  attr.py  base.py  basetable.py  debug.py  dialog.py  empty.py  registry.py  selectionpane.py  table.py
libargos/plugins/: __init__.py  ncdfstore.py  textfilestore.py
libargos/qt/: __init__.py  bindings.py  editabletreemodel.py  labeledwidget.py  misc.py  registry.py  registrytable.py  scientificspinbox.py  togglecolumn.py  treeitems.py  treemodels.py
libargos/repo/: __init__.py  basedetail.py  baserti.py  detailpanes.py  filesytemrti.py  filesytemrtis.py  iconfactory.py  memoryrti.py  memoryrtis.py  memorystore.py  registry.py  repository.py  repotreemodel.py  repotreeview.py  testdata.py  treeitems.py
libargos/selector/: abstractstore.py  datastore.py  filesytemrti.py  memorystore.py  ncdfstore.py  repository.py  storeitems.py  textfilestore.py
libargos/state/: __init__.py  commonstate.py  registry.py
libargos/utils/: __init__.py  cls.py  masks.py  misc.py  moduleinfo.py  registry.py
libargos/widgets/: __init__.py  aboutdialog.py  argostreeview.py  configtreeview.py  constants.py  display.py  mainwindow.py  pluginsdialog.py  repotree.py  repotreeview.py
tests/: create_test_data.py  plot_nans.py  test_argos.py  test_cti.py  test_qsettings.py  test_rti.py  test_treemodels.py  test_utils.py
tests/create_test_data/: make_large_dims.py  make_null_vars.py  make_strings.py  numpyio.py  read.py  readme.txt
(+33 files in other folders)
